Java11 clean-up: Use valueOf or boxing, not constructors