@@ -647,7 +647,7 @@ abstract public class BaseXMLWriter implements RDFXMLWriterI {
         } else if (propName.equalsIgnoreCase( "showDoctypeDeclaration" )) {
             return setShowDoctypeDeclaration( propValue );
         } else if (propName.equalsIgnoreCase( "minimalPrefixes" )) {
-            try { return new Boolean( !writingAllModelPrefixNamespaces ); }
+            try { return Boolean.valueOf( !writingAllModelPrefixNamespaces ); }
             finally { writingAllModelPrefixNamespaces = !getBoolean( propValue ); }
 		} else if (propName.equalsIgnoreCase("xmlbase")) {
 			String result = xmlBase;
@@ -658,13 +658,13 @@ abstract public class BaseXMLWriter implements RDFXMLWriterI {
 		} else if (propName.equalsIgnoreCase("width")) {
 			return setWidth(propValue);
 		} else if (propName.equalsIgnoreCase("longid")) {
-			Boolean result = new Boolean(longId);
+			Boolean result = Boolean.valueOf(longId);
 			longId = getBoolean(propValue);
 			return result;
 		} else if (propName.equalsIgnoreCase("attributeQuoteChar")) {
 			return setAttributeQuoteChar(propValue);
 		} else if (propName.equalsIgnoreCase( "allowBadURIs" )) {
-			Boolean result = new Boolean( !demandGoodURIs );
+			Boolean result = Boolean.valueOf( !demandGoodURIs );
             demandGoodURIs = !getBoolean(propValue);
 			return result;
 		} else if (propName.equalsIgnoreCase("prettyTypes")) {
@@ -691,7 +691,7 @@ abstract public class BaseXMLWriter implements RDFXMLWriterI {
 	}
 
 	private Integer setWidth(Object propValue) {
-		Integer oldValue = new Integer(width);
+		Integer oldValue = Integer.valueOf(width);
 		if (propValue instanceof Integer) {
 			width = ((Integer) propValue).intValue();
 		} else {
@@ -705,7 +705,7 @@ abstract public class BaseXMLWriter implements RDFXMLWriterI {
 	}
 
 	private Integer setTab(Object propValue) {
-		Integer result = new Integer(tabSize);
+		Integer result = Integer.valueOf(tabSize);
 		if (propValue instanceof Integer) {
 			tabSize = ((Integer) propValue).intValue();
 		} else {
